0.9.18
-----------
- clarify the position about symlinks in /etc/fstab in pmount.1 and 
  try to provide a better error message when a mountpoint is found
  in /etc/fstab
	
0.9.17
-----------
- removed obnoxious symlink lookup for fstab entries.
- now using libblkid where available to detect FS type (that's what
  mount is doing). This way we'll have less error messages (nearly
  none, AFAICS), and we won't have wrong FS detection (it happens).
- fix a problem with lookup for fstab entries
- do not look for a mountpoint in etc/fstab if we know a path is
  a device (prevents hanging on stale network mounts)
- pulled translations from Rosetta
- using ntfs-3g if /sbin/mount.ntfs-3g is found.

0.9.16
-----------
- added support for fmask and dmask for filesystems that support it,
  based on a patch by Suren A. Chilingaryan <csa@dside.dyndns.org>
- NTFS now uses nls= instead of iocharset=
- support for ntfsmount (via the ntfs-fuse fs type) and ntfs-3g 
  (via ntfs-3g)
- included the patch by Dan Keder <keder@fi.muni.cz> for listing 
  mounted removable devices, in the fashion of mount (with some edits)
- pumount now works with uuids/labels.
- /etc/pmount.allow now supports fully globs (7)

0.9.15
-----------
- fix problems with the missing bus symlink in recent kernels
- now, pmount keeps track of the encrypted volume it did luksOpen, and
  pumount won't luksClose them unless explicitly asked to (with the
  --luks-force option).

0.9.14
-----------
- pmount: support the 'omfs' file system
- applied patch from Tim Phipps <tim@phipps-hutton.freeserve.co.uk> to
  fix pumount when /media is a symlink.
- use errors=continue when applicable to prevent carefully crafted fs 
  to cause kernel panics.
- some typo fixes
- -p is now a shortcut for --passphrase
- document why for some filesystems, pmount makes the kernel complain.
- use the realpath implementation from the mount utility for security
  reasons (man 3 realpath says 'Avoid using this function.')