@@ -3,6 +3,8 @@
 - clarify the position about symlinks in /etc/fstab in pmount.1 and 
   try to provide a better error message when a mountpoint is found
   in /etc/fstab
+- vfat now uses utf8 rather than iocharset=utf8 when applicable, to
+  avoid getting a case-sensitive filesystem
 	
 0.9.17
 -----------
